# davidson_solver

./: .gitignore  CMakeLists.txt  README.md  make.sh
src/: const.f90  davidson.f90  linalg.f90  main.f90
utils/: python_reference.ipynb
utils/.ipynb_checkpoints/: python_reference-checkpoint.ipynb
